# hinekora

./: .gitattributes  .gitignore  .npmrc  CHANGELOG.md  PRIVACY.md  README.md  biome.json  forge.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.main.config.mts  vite.preload.config.mts  vite.renderer.config.mts  vitest.config.ts  vitest.main.config.mts  vitest.renderer.config.mts
.changeset/: bounded-export-preview.md  bright-auras-unlock.md  calm-overlay-focus.md  clean-editor-edits.md  clean-ruler-end-labels.md  clear-aura-lock-hint.md  config.json  curved-aura-select.md  editor-recording-bookmarks.md  free-groups-thank.md  fresh-capture-profiles.md  global-keybindings.md  group-death-filter.md  hide-missing-clips.md  lively-guides-teach.md  quick-replay-overlay-trimming.md  quiet-death-counter.md  ready-recording-editor-preview.md  smooth-aura-frames.md  smooth-editor-timeline.md  steady-aura-align.md  steady-aura-drag.md  steady-clips-repair.md  steady-editor-edits.md  steady-editor-recordings.md  steady-editor-source-handoff.md  steady-editor-timelines.md  steady-game-status.md  steady-logs-help.md  steady-overlays-record.md  steady-process-watch.md  steady-recorder-start.md  steady-recording-logs.md  steady-rewind-settings.md  steady-storage-guard.md  steady-tabs-align.md  steady-videos-save.md
helpers/poe-process-helper/: Cargo.toml  build.rs
helpers/poe-process-helper/src/: main.rs  poe_process.rs  protocol.rs
helpers/poe-process-helper/src/platform/: mod.rs  stub.rs  windows.rs
(+1073 files in other folders)
