[package]
name = "hinekora-poe-process-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.96.1"
build = "build.rs"

[build-dependencies]
winresource = "0.1.31"

[package.metadata.winresource]
FileDescription = "Hinekora PoE Process Watcher"
ProductName = "Hinekora"
OriginalFilename = "hinekora-poe-process-helper.exe"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
